--- a/src/index.html
+++ b/src/index.html
@@ -46,12 +46,12 @@
                     </li>
                     <li class="nav-item navbar-dropdown">
                         <a href="niunamenos.html" class="nav-link">
-                            <span class="nav-link-name">Ni una menos</span>
+                            <span class="nav-link-name">Ni Una Menos</span>
                             <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 9L5 5L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </a>
-                        <div class="dropdown-menu bg-primary">
+                        <!-- <div class="dropdown-menu bg-primary">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item">
                                     <a href="http://niunamenosperu.pe/aboutus/#historia" target="_blank" class="nav-link">
@@ -68,11 +68,11 @@
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
                     <li class="nav-item navbar-dropdown">
                         <a href="agendamujer.html" class="nav-link">
-                            <span class="nav-link-name">Agenda mujer</span>
+                            <span class="nav-link-name">Agenda Mujer</span>
                             <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 9L5 5L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
@@ -480,13 +480,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item navbar-collapse">
-                                    <a href="#navbarCollapseNiUnaMenos" class="nav-link collapsed" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbarCollapseNiUnaMenos">
-                                        <span class="nav-link-name">Ni una menos</span>
+                                    <a href="niunamenos.html" class="nav-link" role="button">
+                                        <span class="nav-link-name">Ni Una Menos</span>
                                         <svg class="collapse-icon" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M1 11L6 6L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         </svg>
                                     </a>
-                                    <div class="navbar-collapse-menu collapse" id="navbarCollapseNiUnaMenos">
+                                    <!-- <div class="navbar-collapse-menu collapse" id="navbarCollapseNiUnaMenos">
                                         <ul class="nav navbar-nav">
                                             <li class="nav-item">
                                                 <a href="http://niunamenosperu.pe/aboutus/#historia" target="_blank" class="nav-link">
@@ -499,11 +499,11 @@
                                                 </a>
                                             </li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </li>
                                 <li class="nav-item navbar-collapse">
                                     <a href="agendamujer.html" class="nav-link" role="button">
-                                        <span class="nav-link-name">Agenda mujer</span>
+                                        <span class="nav-link-name">Agenda Mujer</span>
                                         <svg class="collapse-icon" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M1 11L6 6L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         </svg>
@@ -594,14 +594,14 @@
                     <circle cx="197.5" cy="320.5" r="320.5" fill="#FEF5F8" />
                 </svg>
             </div>
-            <div class="swiper swiper-portfolio swiper-portfolio-banner container text-white" data-swiper-slides="1" data-swiper-speed="700" data-swiper-parallax="true" data-swiper-loop="true">
+            <div class="swiper swiper-portfolio swiper-portfolio-banner container text-white" data-swiper-slides="1" data-swiper-autoplay="2000" data-swiper-speed="700" data-swiper-parallax="true" data-swiper-loop="true">
                 <div class="swiper-container show-on-scroll" data-cursor-style="cursor-circle" data-cursor-text="saber más" data-show-duration="800">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <a class="card card-portfolio card-overlay card-image-sm card-portfolio-banner text-white" target="_blank" href="https://elperuano.pe/noticia/90484-impulsaran-la-agenda-mujer">
                                 <span class="card-img swiper-image" data-swiper-parallax-x="20%">
                                     <img src="images/destacados-2020-arlette-contreras-congresista.jpg" alt="">
-                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .2);"></span>
+                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .33);"></span>
                                 </span>
                                 <span class="card-img-overlay">
                                     <span class="card-title h1 d-none d-sm-block"><span class="card-title-decoration"></span>Congresista de la República del Perú (2020-2021)</span>
@@ -613,7 +613,7 @@
                             <a class="card card-portfolio card-overlay card-image-sm card-portfolio-banner text-white" target="_blank" href="https://www.gov.uk/government/news/arlette-contreras-receives-uk-human-rights-defender-award.es-419">
                                 <span class="card-img swiper-image" data-swiper-parallax-x="20%">
                                     <img src="images/detacados-2018-uk-human-rights-defenders-award.webp" alt="">
-                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .2);"></span>
+                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .33);"></span>
                                 </span>
                                 <span class="card-img-overlay">
                                     <span class="card-title h1 d-none d-sm-block"><span class="card-title-decoration"></span>Premio defensora de los derechos humanos (U.K., 2018)</span>
@@ -625,7 +625,7 @@
                             <a class="card card-portfolio card-overlay card-image-sm card-portfolio-banner text-white" target="_blank" href="https://www.bbc.com/news/world-46225037">
                                 <span class="card-img swiper-image" data-swiper-parallax-x="20%">
                                     <img src="images/detacados-2018-bbc-100-woman.webp" alt="">
-                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .2);"></span>
+                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .33);"></span>
                                 </span>
                                 <span class="card-img-overlay">
                                     <span class="card-title h1 d-none d-sm-block"><span class="card-title-decoration"></span>Premio 100 mujeres más inspiradoras e influyentes (BBC 100 Woman, 2018)</span>
@@ -637,7 +637,7 @@
                             <a class="card card-portfolio card-overlay card-image-sm card-portfolio-banner text-white" target="_blank" href="https://www.tvperu.gob.pe/noticias/internacionales/arlette-contreras-recibio-premio-internacional-a-las-mujeres-de-coraje-en-eeuu">
                                 <span class="card-img swiper-image" data-swiper-parallax-x="20%">
                                     <img src="images/detacados-2017-us-woman-of-courage-award.jpg" alt="">
-                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .2);"></span>
+                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .33);"></span>
                                 </span>
                                 <span class="card-img-overlay">
                                     <span class="card-title h1 d-none d-sm-block"><span class="card-title-decoration"></span>Premio Internacional de Mujeres de Coraje (U.S., 2017)</span>
@@ -649,7 +649,7 @@
                             <a class="card card-portfolio card-overlay card-image-sm card-portfolio-banner text-white" target="_blank" href="https://time.com/collection/2017-time-100/4736245/cindy-arlette-contreras-bautista/">
                                 <span class="card-img swiper-image" data-swiper-parallax-x="20%">
                                     <img src="images/detacados-2017-time-100-personas-mas-influyentes.jpg" alt="">
-                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .2);"></span>
+                                    <span class="background-color" style="background-color: rgba(14, 14, 14, .33);"></span>
                                 </span>
                                 <span class="card-img-overlay">
                                     <span class="card-title h1 d-none d-sm-block"><span class="card-title-decoration"></span>Premio 100 personas más influyentes (TIME 100, 2017)</span>
@@ -1178,8 +1178,8 @@
                         </a>
                         <p class="mb-0">Las mujeres tenemos derecho a una vida libre de violencia.</p>
                     </div>
-                    <div class="d-none d-lg-block col-2"></div>
-                    <div class="col-lg-6">
+                    <div class="d-none d-lg-block col-1"></div>
+                    <div class="col-lg-8">
                         <!-- <p class="subtitle mb-30 text-muted">subscribe to our newsletter</p>
                         <form action="#">
                             <div class="form-group-overlay">
@@ -1188,7 +1188,7 @@
                             </div>
                         </form> -->
                     </div>
-                    <div class="d-none d-lg-block col-1"></div>
+                    <!-- <div class="d-none d-lg-block col-1"></div> -->
                 </div>
                 <div class="row justify-content-between gh-1 gv-4 mb-30">
                     <div class="col-lg-3">
@@ -1201,15 +1201,15 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="d-none d-lg-block col-2"></div>
-                    <div class="col-12 col-lg-6">
-                        <!-- <div class="row gh-1 gv-1">
+                    <div class="d-none d-lg-block col-1"></div>
+                    <div class="col-12 col-lg-8">
+                        <div class="row gh-1 gv-1">
                             <div class="col-12 col-lg-4">
                                 <ul class="nav flex-column text-white">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">About us</a>
+                                        <a href="http://niunamenosperu.pe/" target="_blank" class="nav-link">Ni Una Menos Perú</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a href="#" class="nav-link">Services</a>
                                     </li>
                                     <li class="nav-item">
@@ -1217,38 +1217,35 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">Careers</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <ul class="nav flex-column text-white">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Work process</a>
+                                        <a href="https://www.gob.pe/mimp" target="_blank" class="nav-link">Ministerio de la Mujer</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">FAQ</a>
+                                        <a href="https://www.defensoria.gob.pe/" target="_blank" class="nav-link">Defensoría del Pueblo</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a href="#" class="nav-link">Our blog</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">Contacts</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <ul class="nav flex-column text-white">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Privacy</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link">Terms of Use</a>
+                                        <a href="https://play.google.com/store/apps/details?id=com.epicalsoft.agendamujer" target="_blank" class="nav-link">Agenda Mujer (Android)</a>
                                     </li>
                                 </ul>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
-                    <div class="d-none d-lg-block col-1"></div>
+                    <!-- <div class="d-none d-lg-block col-1"></div> -->
                 </div>
                 <div class="row justify-content-between mt-100 mt-lg-0">
                     <div class="col-auto">
