--- a/src/niunamenos.html
+++ b/src/niunamenos.html
@@ -46,12 +46,12 @@
                     </li>
                     <li class="nav-item navbar-dropdown active">
                         <a href="niunamenos.html" class="nav-link">
-                            <span class="nav-link-name">Ni una menos</span>
+                            <span class="nav-link-name">Ni Una Menos</span>
                             <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 9L5 5L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                         </a>
-                        <div class="dropdown-menu bg-primary">
+                        <!-- <div class="dropdown-menu bg-primary">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item">
                                     <a href="http://niunamenosperu.pe/aboutus/#historia" target="_blank" class="nav-link">
@@ -68,11 +68,11 @@
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </li>
                     <li class="nav-item navbar-dropdown">
                         <a href="agendamujer.html" class="nav-link">
-                            <span class="nav-link-name">Agenda mujer</span>
+                            <span class="nav-link-name">Agenda Mujer</span>
                             <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M1 9L5 5L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
@@ -475,13 +475,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item navbar-collapse active">
-                                    <a href="#navbarCollapseNiUnaMenos" class="nav-link collapsed" role="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbarCollapseNiUnaMenos">
-                                        <span class="nav-link-name">Ni una menos</span>
+                                    <a href="niunamenos.html" class="nav-link" role="button">
+                                        <span class="nav-link-name">Ni Una Menos</span>
                                         <svg class="collapse-icon" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M1 11L6 6L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         </svg>
                                     </a>
-                                    <div class="navbar-collapse-menu collapse" id="navbarCollapseNiUnaMenos">
+                                    <!-- <div class="navbar-collapse-menu collapse" id="navbarCollapseNiUnaMenos">
                                         <ul class="nav navbar-nav">
                                             <li class="nav-item">
                                                 <a href="http://niunamenosperu.pe/aboutus/#historia" target="_blank" class="nav-link">
@@ -494,11 +494,11 @@
                                                 </a>
                                             </li>
                                         </ul>
-                                    </div>
+                                    </div> -->
                                 </li>
                                 <li class="nav-item navbar-collapse">
                                     <a href="agendamujer.html" class="nav-link" role="button">
-                                        <span class="nav-link-name">Agenda mujer</span>
+                                        <span class="nav-link-name">Agenda Mujer</span>
                                         <svg class="collapse-icon" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M1 11L6 6L1 1" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         </svg>
@@ -825,8 +825,8 @@
                         </a>
                         <p class="mb-0">Las mujeres tenemos derecho a una vida libre de violencia.</p>
                     </div>
-                    <div class="d-none d-lg-block col-2"></div>
-                    <div class="col-lg-6">
+                    <div class="d-none d-lg-block col-1"></div>
+                    <div class="col-lg-8">
                         <!-- <p class="subtitle mb-30 text-muted">subscribe to our newsletter</p>
                         <form action="#">
                             <div class="form-group-overlay">
@@ -835,7 +835,7 @@
                             </div>
                         </form> -->
                     </div>
-                    <div class="d-none d-lg-block col-1"></div>
+                    <!-- <div class="d-none d-lg-block col-1"></div> -->
                 </div>
                 <div class="row justify-content-between gh-1 gv-4 mb-30">
                     <div class="col-lg-3">
@@ -848,15 +848,15 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="d-none d-lg-block col-2"></div>
-                    <div class="col-12 col-lg-6">
-                        <!-- <div class="row gh-1 gv-1">
+                    <div class="d-none d-lg-block col-1"></div>
+                    <div class="col-12 col-lg-8">
+                        <div class="row gh-1 gv-1">
                             <div class="col-12 col-lg-4">
                                 <ul class="nav flex-column text-white">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">About us</a>
+                                        <a href="http://niunamenosperu.pe/" target="_blank" class="nav-link">Ni Una Menos Perú</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a href="#" class="nav-link">Services</a>
                                     </li>
                                     <li class="nav-item">
@@ -864,38 +864,35 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">Careers</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <ul class="nav flex-column text-white">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Work process</a>
+                                        <a href="https://www.gob.pe/mimp" target="_blank" class="nav-link">Ministerio de la Mujer</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">FAQ</a>
+                                        <a href="https://www.defensoria.gob.pe/" target="_blank" class="nav-link">Defensoría del Pueblo</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a href="#" class="nav-link">Our blog</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#" class="nav-link">Contacts</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <ul class="nav flex-column text-white">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Privacy</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link">Terms of Use</a>
+                                        <a href="https://play.google.com/store/apps/details?id=com.epicalsoft.agendamujer" target="_blank" class="nav-link">Agenda Mujer (Android)</a>
                                     </li>
                                 </ul>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
-                    <div class="d-none d-lg-block col-1"></div>
+                    <!-- <div class="d-none d-lg-block col-1"></div> -->
                 </div>
                 <div class="row justify-content-between mt-100 mt-lg-0">
                     <div class="col-auto">
@@ -943,6 +940,7 @@
                 </div>
             </div>
         </footer>
+        
         <!-- START: Scripts -->
         <!-- Object Fit Polyfill -->
         <script src="assets/vendor/object-fit-images/dist/ofi.min.js"></script>
