--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <meta name="author" content="@malexandersalazar">
         <link rel="icon" type="image/png" href="images/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta property="og:image" content="images/destacados-2020-arlette-contreras-congresista.jpg" />
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" rel="stylesheet">
         <!-- START: Styles -->
