--- a/src/niunamenos.html
+++ b/src/niunamenos.html
@@ -29,7 +29,7 @@
         <header class="navbar navbar-top navbar-expand-lg bg-primary">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    Arlette Contreras.
+                    Arlette Contreras
                 </a>
                 <a class="navbar-toggle" href="#navbar-mobile-style-2" data-fancybox data-base-class="fancybox-navbar" data-keyboard="false" data-auto-focus="false" data-touch="false" data-close-existing="true" data-small-btn="false" data-toolbar="false">
                     <span></span>
@@ -453,7 +453,7 @@
             <div class="navbar-head bg-accent">
                 <div class="container">
                     <a class="navbar-brand text-white" href="index.html">
-                        Arlette Contreras.
+                        Arlette Contreras
                     </a>
                     <a class="navbar-toggle text-white" href="#" data-fancybox-close>
                         <span></span>
@@ -530,8 +530,7 @@
                             <div class="mb-60 text-white">
                                 <p class="lead mb-17 font-weight-medium">Información de contacto:</p>
                                 <ul class="list-group borderless font-size-17">
-                                    <li class="list-group-item"><a href="mailto:acontreras@congreso.gob.pe" class=text-white>acontreras@congreso.gob.pe</a></li>
-                                    <li class="list-group-item"><a href="callto:013117182" class=text-white>(01) 311-7182</a></li>
+                                    <li class="list-group-item"><a href="mailto:abg.arlettecontreras@gmail.com" class=text-white>abg.arlettecontreras@gmail.com</a></li>
                                 </ul>
                             </div>
                             <div class="mb-60 text-white">
@@ -821,7 +820,7 @@
                 <div class="row justify-content-between mb-100 gh-1 gv-4">
                     <div class="col-lg-3">
                         <a href="index.html" class="d-block mb-30">
-                            <h3 class="text-white">Arlette Contreras.</h3>
+                            <h3 class="text-white">Arlette Contreras</h3>
                             <!-- <img width="184" src="assets/images/logo-white.svg" alt=""> -->
                         </a>
                         <p class="mb-0">Las mujeres tenemos derecho a una vida libre de violencia.</p>
@@ -842,10 +841,7 @@
                     <div class="col-lg-3">
                         <ul class="nav flex-column text-white">
                             <li class="nav-item">
-                                <a href="callto:013117182" class="nav-link">(01) 311-7182</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="mailto:acontreras@congreso.gob.pe" class="nav-link">acontreras@congreso.gob.pe</a>
+                                <a href="mailto:abg.arlettecontreras@gmail.com" class="nav-link">abg.arlettecontreras@gmail.com</a>
                             </li>
                         </ul>
                     </div>
