--- a/src/agendamujer.html
+++ b/src/agendamujer.html
@@ -866,7 +866,7 @@
                                 </a>
                             </div>
                             <div class="col-12 col-sm-6 col-md-6 isotope-item" data-filters="legislatura2">
-                                <a class="card card-portfolio card-default card-lawproject card-image-xs card-hover-frame" target="_blank" href="files/PL 6081.pdf">
+                                <a class="card card-portfolio card-default card-lawproject card-image-xs card-hover-frame" target="_blank" href="files/pl-6081_compressed.pdf">
                                     <!-- <span class="card-img" data-cursor-style="cursor-circle" data-cursor-text="descargar">
                                         <img src="images/agendamujer-proyectodeley.png" alt="">
                                     </span> -->
@@ -932,7 +932,7 @@
                                 </a>
                             </div>
                             <div class="col-12 col-sm-6 col-md-6 isotope-item" data-filters="legislatura2">
-                                <a class="card card-portfolio card-default card-lawproject card-image-xs card-hover-frame" target="_blank" href="files/PL 6827-Ley nacional de Cáncer.pdf">
+                                <a class="card card-portfolio card-default card-lawproject card-image-xs card-hover-frame" target="_blank" href="files/pl_6827-ley_nacional_de_cancer.pdf">
                                     <!-- <span class="card-img" data-cursor-style="cursor-circle" data-cursor-text="descargar">
                                         <img src="images/agendamujer-proyectodeley.png" alt="">
                                     </span> -->
@@ -1154,18 +1154,6 @@
                                     </span>
                                     <span class="card-img-overlay">
                                         <span class="card-title h4">Marzo 2021</span>
-                                        <span class="card-category subtitle">semana de representación</span>
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="col-12 col-sm-6 col-md-4 isotope-item">
-                                <a class="card card-portfolio card-overlay card-image-lg card-hover-appearance text-white text-center" href="files/informe-semanar-2021-abril.pdf">
-                                    <span class="card-img">
-                                        <img src="images/agendamujer-semanar-2021-abril.jpg" alt="">
-                                        <span class="background-color" style="background-color: rgba(14, 14, 14, 0.7);"></span>
-                                    </span>
-                                    <span class="card-img-overlay">
-                                        <span class="card-title h4">Abril 2021</span>
                                         <span class="card-category subtitle">semana de representación</span>
                                     </span>
                                 </a>
